--- a/build.gradle
+++ b/build.gradle
@@ -26,5 +26,6 @@ repositories{
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
-    testCompile('org.springframwork.boot:spring-boot-starter-test')
+    compile('org.projectlombok:lombok')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
