--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.jpa.open-in-view=false
+spring.profiles.include=oauth
+
+spring.session.store-type=jdbc
