--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.jpa.show-sql=true
-spring.h2.console.enabled=true
 spring.jpa.open-in-view=false
-spring.profiles.include=oauth
 
+spring.jpa.show-sql=true
+spring.profiles.include=real-oauth
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.h2.console.enabled=true
 spring.session.store-type=jdbc
