--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.jpa.show-sql=true
 spring.profiles.include=real-oauth
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.h2.console.enabled=true
-#spring.session.store-type=jdbc
+spring.session.store-type=jdbc
