--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.datasource.hikari.username=sa
 
 
-logging.level.org.springframework=debug
-logging.level.org.springframework.web=debug
+#logging.level.org.springframework=debug
+#logging.level.org.springframework.web=debug
