--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,8 @@ jobs:
       shell: bash
       
     - name: Make zip file
-      run: zip -r ./$GITHUB_SHA.zip
+      run: zip -r ./$GITHUB_SHA.zip .
+
       shell: bash
       
     - name: Configure AWS credentials
