--- a/appspec.yml
+++ b/appspec.yml
@@ -13,12 +13,6 @@ permissions:
 
 hooks:
   ApplicationStart:
-    - location: scripts/run_was.sh
-      timeout: 180
-      runas: ec2-user
-    - location: scripts/health_check.sh
-      timeout: 180
-      runas: ec2-user
-    - location: scripts/switch.sh
-      timeout: 180
+    - location: deploy.sh
+      timeout: 60
       runas: ec2-user
