--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ repositories{
 dependencies {
     //(3)
     implementation('org.springframework.boot:spring-boot-starter-web')
-    implementation('org.springframework.boot:spring-boot-starter-mustache')
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
     // lombok
     implementation('org.projectlombok:lombok')
