--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
 spring.jpa.open-in-view=false
 
 spring.jpa.show-sql=true
-spring.profiles.include=oauth
+spring.profiles.include=oauth,real-db
 spring.h2.console.enabled=true
-spring.session.store-type=jdbc
+#spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema= always
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
-spring.jpa.properties.hibernate.dialect.storage_engine=innodb
-spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
-spring.datasource.hikari.username=sa
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+spring.datasource.hikari.jdbc-url=jdbc:h2:tcp://localhost/~/database/myStores;
+spring.datasource.hikari.username=test
+spring.datasource.hikari.password=1234
 
 #logging.level.org.springframework=debug
 #logging.level.org.springframework.web=debug
