database mysql로 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,18 @@ spring.h2.console.enabled=true
 #spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema= always
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.properties.hibernate.dialect.storage_engine=innodb
-spring.datasource.hikari.jdbc-url=jdbc:h2:tcp://localhost/~/database/myStores;
-spring.datasource.hikari.username=test
-spring.datasource.hikari.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/dotorydb?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=dotory
+spring.datasource.password=@DBqudtn587
+
+
+#spring.datasource.hikari.jdbc-url=jdbc:h2:tcp://localhost/~/database/myStores;
+#spring.datasource.hikari.username=test
+#spring.datasource.hikari.password=1234
 
 #logging.level.org.springframework=debug
 #logging.level.org.springframework.web=debug
