--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.h2.console.enabled=true
 spring.session.jdbc.initialize-schema= always
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.properties.hibernate.default_batch_fetch_size=500
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
